--- a/index.html
+++ b/index.html
@@ -9,10 +9,27 @@ and open the template in the editor.
         <title>Sua loja no mobile</title>
         <meta charset="ISO-8859-1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            iframe {  
+                height: 503px;
+                margin: 115px 24px;
+                width: 304px;
+
+                scrollbar-3dlight-color: #000000;
+                scrollbar-arrow-color: #ffffff;
+                scrollbar-darkshadow-color: #000000;
+                scrollbar-face-color: #000000;
+                scrollbar-highlight-color: #ffffff;
+                scrollbar-shadow-color: #ffffff;
+                scrollbar-track-color: #000000;
+            }
+        </style>
+        
+        
     </head>
     <body>
         <div style="background: url('iphone.png'); width: 333px; height: 735px;">
-            <iframe src="https://glauciocontiero.commercesuite.com.br/" width="333" height="735">
+            <iframe src="https://glauciocontiero.commercesuite.com.br/"  frameborder='0' scrolling='yes' class='cell'/>
         </div>
     </body>
 </html>
