--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
         <meta charset="ISO-8859-1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            iframe {  
-                height: 503px;
-                margin: 115px 10px;
-                width: 320px;
-            }
+   
         </style>
         
         
     </head>
     <body>
-            <iframe src="http://www.bazardoratinho.com.br/"  frameborder='0' scrolling='yes' class='cell'/>
+            <iframe src="http://bandup.tray.com.br/loja/loja.php?loja=410870" frameborder="0" style="overflow-x:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
     </body>
 </html>
