--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,12 @@ and open the template in the editor.
     <head>
         <title>TODO supply a title</title>
         <meta charset="ISO-8859-1">
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                $(window.parent.document).find('body').css('background','red');
+            })
+        </script>
     </head>
     <body>
         <div>TODO write content</div>
