--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         
     </head>
     <body>
-            <iframe src="http://bandup.tray.com.br/loja/loja.php?loja=410870" frameborder="0" style="overflow-x:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+            <iframe src="http://bbelintanitray.github.io/teste.html" frameborder="0" style="overflow-x:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
     </body>
 </html>
