--- a/teste.html
+++ b/teste.html
@@ -11,7 +11,8 @@ and open the template in the editor.
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script>
             $(document).ready(function(){
-                $(window.parent.document).find('body').css('background','red');
+                $(window.parent.document).find('head').append('<meta id="Viewport" name="viewport" content="width=device-width, user-scalable=no">');
+               
             })
         </script>
     </head>
