--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -67,6 +67,10 @@
 
 	</form>
 
+	<pre id="json">
+		Aguarde...
+	</pre>
+
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="loadjson.js"></script>
 	<script src="http://assets.locaweb.com.br/locastyle/3.7.2/javascripts/locastyle.js" type="text/javascript"></script>
@@ -75,6 +79,7 @@
 
 		$.getJSON( "dados.json", function( data ) {
 			$('form').loadJSON(data);
+			$('#json').html(data);
 		})
 		
 	</script>
