--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -79,7 +79,7 @@
 
 		$.getJSON( "dados.json", function( data ) {
 			$('form').loadJSON(data);
-			$('#json').html(data);
+			alert(data);
 		})
 		
 	</script>
