--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -67,7 +67,7 @@
 
 	</form>
 
-	<pre id="json">
+	<pre id="json" class="col-md-4">
 		{
 			"nome":"Bruno Sanches Belintani",
 			"sexo": "masculino",
