--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -41,18 +41,18 @@
 	    </label>
 
 	    <div class="ls-label col-md-4">
-	      <p>Selecione pelo menos uma opção:</p>
+	      <p>Selecione pelo menos uma opÃ§Ã£o:</p>
 	      <label class="ls-label-text">
 	        <input type="checkbox" name="opcao1" id="opcao1">
-	        Opção 1
+	        OpÃ§Ã£o 1
 	      </label>
 	      <label class="ls-label-text">
 	        <input type="checkbox" name="opcao2" id="opcao2" >
-	        Opção 2
+	        OpÃ§Ã£o 2
 	      </label>
 	      <label class="ls-label-text">
 	        <input type="checkbox" name="opcao3" id="opcao3">
-	        Opção 3
+	        OpÃ§Ã£o 3
 	      </label>
 	    </div>
 
