--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-	<form id="loadForm">
+	<form id="loadForm" class="col-md-4">
 		
 		<label class="ls-label col-md-4">
 	      <b class="ls-label-text">Nome</b>
