--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-	<form id="loadForm" class="col-md-8">
+	<form id="loadForm">
 		
 		<label class="ls-label col-md-4">
 	      <b class="ls-label-text">Nome</b>
@@ -67,7 +67,7 @@
 
 	</form>
 
-	<pre id="json" class="col-md-4">
+	<pre id="json" class="">
 		{
 			"nome":"Bruno Sanches Belintani",
 			"sexo": "masculino",
