--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -67,17 +67,19 @@
 
 	</form>
 
-	<pre id="json" class="">
-		{
-			"nome":"Bruno Sanches Belintani",
-			"sexo": "masculino",
-			"cor": "verde",
-			"opcao1":false,
-			"opcao2": true,
-			"opcao3": false,
-			"mensagem":"Carregando dados via js para o form"
-		}  
-	</pre>
+	<div>
+		<pre id="json" class="">
+			{
+				"nome":"Bruno Sanches Belintani",
+				"sexo": "masculino",
+				"cor": "verde",
+				"opcao1":false,
+				"opcao2": true,
+				"opcao3": false,
+				"mensagem":"Carregando dados via js para o form"
+			}  
+		</pre>
+	<div>
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="loadjson.js"></script>
