--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -32,7 +32,7 @@
 		<label class="ls-label col-md-4">
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
-	        <select class="ls-custom" name="cor" id="cor">
+	        <select class="ls-custom" name="selcor" id="selcor">
 	          <option value="azul">Azul</option>
 	          <option value="vermelho">Vermelho</option>
 	          <option value="verde">Verde</option>
@@ -72,7 +72,7 @@
 			{
 				"nome":"Bruno Sanches Belintani",
 				"sexo": "masculino",
-				"cor": "verde",
+				"selcor": "verde",
 				"opcao1":false,
 				"opcao2": true,
 				"opcao3": false,
