--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -67,15 +67,15 @@
 
 	</form>
 
-	<div>
+	<div class="ls-clearfix">
 		<pre id="json" class="">
 			{
 				"nome":"Bruno Sanches Belintani",
-				"sexo": "masculino",
-				"selcor": "verde",
+				"sexo":"masculino",
+				"selcor":"verde",
 				"opcao1":false,
-				"opcao2": true,
-				"opcao3": false,
+				"opcao2":true,
+				"opcao3":false,
 				"mensagem":"Carregando dados via js para o form"
 			}  
 		</pre>
