--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -67,8 +67,8 @@
 
 	</form>
 
-	<div class="ls-clearfix">
-		<pre id="json" class="">
+	<div class="ls-overflow-hidden">
+		<pre>
 			{
 				"nome":"Bruno Sanches Belintani",
 				"sexo":"masculino",
