--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -9,15 +9,15 @@
 
 <body>
 
-	<form id="loadForm">
+	<form id="loadForm" class="col-md-6">
 		
-		<label class="ls-label col-md-4">
+		<label class="ls-label">
 	      <b class="ls-label-text">Nome</b>
 	      <input type="text" name="nome" placeholder="Nome e sobrenome" required="">
 	    </label>
 
 
-		<div class="ls-label col-md-4">
+		<div class="ls-label">
 			<b>Sexo:</b>
 			<label class="ls-label-text">
 				<input type="radio" name="sexo" value="feminino"  required="">
@@ -29,7 +29,7 @@
 			</label>
 		</div>
 
-		<label class="ls-label col-md-4">
+		<label class="ls-label">
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
 	        <select class="ls-custom" name="selcor" id="selcor">
@@ -40,7 +40,7 @@
 	      </div>
 	    </label>
 
-	    <div class="ls-label col-md-4">
+	    <div class="ls-label">
 	      <p>Selecione pelo menos uma opção:</p>
 	      <label class="ls-label-text">
 	        <input type="checkbox" name="opcao1" id="opcao1">
@@ -56,7 +56,7 @@
 	      </label>
 	    </div>
 
-	    <label class="ls-label  col-md-4">
+	    <label class="ls-label ">
 		    <b class="ls-label-text">Mensagem</b>
 		    <textarea rows="4" name="mensagem" id="mensagem"  required=""></textarea>
 		</label>
@@ -67,19 +67,17 @@
 
 	</form>
 
-	<div class="ls-overflow-hidden">
-		<pre>
-			{
-				"nome":"Bruno Sanches Belintani",
-				"sexo":"masculino",
-				"selcor":"verde",
-				"opcao1":false,
-				"opcao2":true,
-				"opcao3":false,
-				"mensagem":"Carregando dados via js para o form"
-			}  
-		</pre>
-	<div>
+	<pre class="col-md-6">
+		{
+			"nome":"Bruno Sanches Belintani",
+			"sexo":"masculino",
+			"selcor":"verde",
+			"opcao1":false,
+			"opcao2":true,
+			"opcao3":false,
+			"mensagem":"Carregando dados via js para o form"
+		}  
+	</pre>
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="loadjson.js"></script>
