--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -10,7 +10,9 @@
 <body>
 	<h1 class="ls-title-intro ls-ico-home">Load Json2Form</h1>
 	<form id="loadForm" class="col-md-6">
-		<h3>Formulário</h3>
+		<header class="ls-info-header">
+	    	<h2 class="ls-title-3">Form</h2>
+		</header>
 		<label class="ls-label">
 	      <b class="ls-label-text">Nome</b>
 	      <input type="text" name="nome" placeholder="Nome e sobrenome" required="">
@@ -67,21 +69,24 @@
 
 	</form>
 
-	<pre class="col-md-6">
-		<h3>Json de retorno</h3>
-		<p>
-			{
-				"nome":"Bruno Sanches Belintani",
-				"sexo":"masculino",
-				"selcor":"verde",
-				"opcao1":false,
-				"opcao2":true,
-				"opcao3":false,
-				"mensagem":"Carregando dados via js para o form"
-			} 
-		</p> 
-	</pre>
-
+	<div class="col-md-6">
+	<header class="ls-info-header">
+	    <h2 class="ls-title-3">Json</h2>
+	</header>
+		<pre>
+			<p>
+				{
+					"nome":"Bruno Sanches Belintani",
+					"sexo":"masculino",
+					"selcor":"verde",
+					"opcao1":false,
+					"opcao2":true,
+					"opcao3":false,
+					"mensagem":"Carregando dados via js para o form"
+				} 
+			</p> 
+		</pre>
+	</div>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="loadjson.js"></script>
 	<script src="http://assets.locaweb.com.br/locastyle/3.7.2/javascripts/locastyle.js" type="text/javascript"></script>
