--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -9,10 +9,11 @@
 
 <body>
 	<h1 class="ls-title-intro ls-ico-home">Load Json2Form</h1>
+	
 	<form id="loadForm" class="col-md-6">
-		<header class="ls-info-header">
-	    	<h2 class="ls-title-3">Form</h2>
-		</header>
+		
+		<h3 class="doc-title-3">Formulário</h3>
+		
 		<label class="ls-label">
 	      <b class="ls-label-text">Nome</b>
 	      <input type="text" name="nome" placeholder="Nome e sobrenome" required="">
@@ -70,21 +71,17 @@
 	</form>
 
 	<div class="col-md-6">
-	<header class="ls-info-header">
-	    <h2 class="ls-title-3">Json</h2>
-	</header>
+	<h3 class="doc-title-3">Json de retorno</h3>
 		<pre>
-			<p>
-				{
-					"nome":"Bruno Sanches Belintani",
-					"sexo":"masculino",
-					"selcor":"verde",
-					"opcao1":false,
-					"opcao2":true,
-					"opcao3":false,
-					"mensagem":"Carregando dados via js para o form"
-				} 
-			</p> 
+			{
+				"nome":"Bruno Sanches Belintani",
+				"sexo":"masculino",
+				"selcor":"verde",
+				"opcao1":false,
+				"opcao2":true,
+				"opcao3":false,
+				"mensagem":"Carregando dados via js para o form"
+			} 
 		</pre>
 	</div>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
