--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -12,7 +12,7 @@
 	
 	<form id="loadForm" class="col-md-6">
 		
-		<h3 class="doc-title-3">Formulário</h3>
+		<h3 class="doc-title-3" style="margin-bottom:20px;">Formulário</h3>
 		
 		<label class="ls-label">
 	      <b class="ls-label-text">Nome</b>
@@ -71,7 +71,7 @@
 	</form>
 
 	<div class="col-md-6">
-	<h3 class="doc-title-3">Json de retorno</h3>
+	<h3 class="doc-title-3"  style="margin-bottom:20px;">Json de retorno</h3>
 		<pre>
 			{
 				"nome":"Bruno Sanches Belintani",
