--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -35,7 +35,7 @@
 		<label class="ls-label">
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
-	        <select class="ls-custom" name="selcor" id="selcor">
+	        <select class="ls-custom" name="cor" id="cor">
 	          <option value="azul">Azul</option>
 	          <option value="vermelho">Vermelho</option>
 	          <option value="verde">Verde</option>
