--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -76,7 +76,7 @@
 			{
 				"nome":"Bruno Sanches Belintani",
 				"sexo":"masculino",
-				"selcor":"verde",
+				"cor":"verde",
 				"opcao1":false,
 				"opcao2":true,
 				"opcao3":false,
