--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -36,9 +36,10 @@
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
 	        <select class="ls-custom" name="cor" id="cor">
-	          <option value="azul">Azul</option>
-	          <option value="vermelho">Vermelho</option>
-	          <option value="verde">Verde</option>
+	        	<option value="" selected="selected">-</option>
+	    		<option value="azul">Azul</option>
+	          	<option value="vermelho">Vermelho</option>
+	          	<option value="verde">Verde</option>
 	        </select>
 	      </div>
 	    </label>
