--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -35,7 +35,7 @@
 		<label class="ls-label">
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
-	        <select class="ls-custom" name="select" id="cor">
+	        <select class="ls-custom" name="cor" id="cor">
 	        	<option value="" selected="selected">-</option>
 	    		<option value="azul">Azul</option>
 	          	<option value="vermelho">Vermelho</option>
