--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -35,7 +35,7 @@
 		<label class="ls-label">
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
-	        <select class="ls-custom" name="cor" id="cor">
+	        <select name="Town" id="Town">
 	        	<option value="" selected="selected">-</option>
 	    		<option value="azul">Azul</option>
 	          	<option value="vermelho">Vermelho</option>
@@ -77,7 +77,7 @@
 			{
 				"nome":"Bruno Sanches Belintani",
 				"sexo":"masculino",
-				"cor":"verde",
+				"Town":"verde",
 				"opcao1":false,
 				"opcao2":true,
 				"opcao3":false,
