--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -36,7 +36,7 @@
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
 	        <select name="Town" id="Town">
-	        	<option value="" selected="selected">-</option>
+	        	<option>-</option>
 	    		<option value="azul">Azul</option>
 	          	<option value="vermelho">Vermelho</option>
 	          	<option value="verde">Verde</option>
