--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -35,8 +35,7 @@
 		<label class="ls-label">
 	      <b class="ls-label-text">Selecione uma cor</b>
 	      <div class="ls-custom-select">
-	        <select name="Town" id="Town">
-	        	<option>-</option>
+	        <select name="cor" id="cor">
 	    		<option value="azul">Azul</option>
 	          	<option value="vermelho">Vermelho</option>
 	          	<option value="verde">Verde</option>
