--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -72,7 +72,7 @@
 
 	<div class="col-md-6">
 	<h3 class="doc-title-3"  style="margin-bottom:20px;">Json de retorno</h3>
-		<pre>
+		<pre id="json">
 			{
 				"nome":"Bruno Sanches Belintani",
 				"sexo":"masculino",
@@ -93,6 +93,11 @@
 		$.getJSON( "dados.json", function( data ) {
 			$('form').loadJSON(data);
 		})
+
+		$( "form" ).submit(function( event ) {
+		   $('#json').html($( this ).serializeArray());
+		  event.preventDefault();
+		});
 		
 	</script>
 
