--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -101,7 +101,7 @@
 			    function(i, v) {
 			        formObject[v.name] = v.value;
 			    });
-			$('#json').html(FormObject);
+			$('#json').html(formObject);
 		});
 		
 	</script>
