--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -101,6 +101,7 @@
 			    function(i, v) {
 			        formObject[v.name] = v.value;
 			    });
+			alert(formObject);
 			$('#json').html(formObject);
 			return false;
 		});
