--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1 class="ls-title-intro ls-ico-home">Load Json2Form</h1>
 	
-	<form id="loadForm" class="col-md-6">
+	<form id="loadForm" class="col-md-6" method="post">
 		
 		<h3 class="doc-title-3" style="margin-bottom:20px;">Formulário</h3>
 		
