--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -5,6 +5,8 @@
 
 <link href="http://assets.locaweb.com.br/locastyle/3.7.2/stylesheets/locastyle.css" rel="stylesheet" type="text/css">
 
+<link href="bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
+<link href="bootstrap.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -64,6 +66,13 @@
 		    <textarea rows="4" name="mensagem" id="mensagem"  required=""></textarea>
 		</label>
 
+		<div class="input text">
+			<div class="input-group demo2 colorpicker-element">
+				<span class="input-group-addon"><i style="background-color: rgb(238, 238, 238);"></i></span>
+				<input name="data[Personalizacoesmobile][corfundo]" class="form-control" type="text" value="#eeeeee" id="PersonalizacoesmobileCorfundo"> 
+			</div>
+		</div>
+
 		<div class="col-md-4">
 		    <input type="submit" class="ls-btn" value="Salvar">
 		</div>
@@ -87,12 +96,19 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="loadjson.js"></script>
 	<script src="http://assets.locaweb.com.br/locastyle/3.7.2/javascripts/locastyle.js" type="text/javascript"></script>
+	<script src="bootstrap.min.js" type="text/javascript"></script>
+	<script src="bootstrap-colorpicker.min.js" type="text/javascript"></script>
 
 	<script>
 
 		$.getJSON( "dados.json", function( data ) {
 			$('form').loadJSON(data);
 		})
+
+		$(document).ready(function(){
+			$('.demo2').colorpicker();
+		})
+   
 		
 	</script>
 
