--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -66,10 +66,11 @@
 		    <textarea rows="4" name="mensagem" id="mensagem"  required=""></textarea>
 		</label>
 
-		<div class="input text">
+		<div class="ls-label">
+			<b class="ls-label-text">cor</b>
 			<div class="input-group demo2 colorpicker-element">
 				<span class="input-group-addon"><i style="background-color: rgb(238, 238, 238);"></i></span>
-				<input name="data[Personalizacoesmobile][corfundo]" class="form-control" type="text" value="#eeeeee" id="PersonalizacoesmobileCorfundo"> 
+				<input name="corp" class="form-control" type="text" value="#eeeeee" id="corp"> 
 			</div>
 		</div>
 
@@ -89,7 +90,8 @@
 				"opcao1":false,
 				"opcao2":true,
 				"opcao3":false,
-				"mensagem":"Carregando dados via js para o form"
+				"mensagem":"Carregando dados via js para o form",
+				"corp": "#cc0000"
 			} 
 		</pre>
 	</div>
