--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -5,8 +5,8 @@
 
 <link href="http://assets.locaweb.com.br/locastyle/3.7.2/stylesheets/locastyle.css" rel="stylesheet" type="text/css">
 
-<link href="bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
-<link href="bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
+<link href="colorpicker/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
 			<b class="ls-label-text">cor</b>
 			<div class="input-group demo2 colorpicker-element">
 				<span class="input-group-addon"><i style="background-color: rgb(238, 238, 238);"></i></span>
-				<input name="corp" class="form-control" type="text" value="#eeeeee" id="corp"> 
+				<input name="corp" class="form-control" type="text"  id="corp"> 
 			</div>
 		</div>
 
@@ -99,7 +99,7 @@
 	<script type="text/javascript" src="loadjson.js"></script>
 	<script src="http://assets.locaweb.com.br/locastyle/3.7.2/javascripts/locastyle.js" type="text/javascript"></script>
 	<script src="bootstrap.min.js" type="text/javascript"></script>
-	<script src="bootstrap-colorpicker.min.js" type="text/javascript"></script>
+	<script src="colorpicker/css/bootstrap-colorpicker.min.js" type="text/javascript"></script>
 
 	<script>
 
