--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -6,7 +6,7 @@
 <link href="http://assets.locaweb.com.br/locastyle/3.7.2/stylesheets/locastyle.css" rel="stylesheet" type="text/css">
 
 <link href="colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
-<link href="colorpicker/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="bootstrap.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
