--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -69,7 +69,7 @@
 		<div class="ls-label">
 			<b class="ls-label-text">cor</b>
 			<div class="input-group demo2 colorpicker-element">
-				<span class="input-group-addon"><i style="background-color: rgb(238, 238, 238);"></i></span>
+				<span class="input-group-addon"><i id="corp" style="background-color: rgb(238, 238, 238);"></i></span>
 				<input name="corp" class="form-control" type="text"  id="corp"> 
 			</div>
 		</div>
