--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -70,7 +70,7 @@
 			<b class="ls-label-text">cor</b>
 			<div class="input-group demo2 colorpicker-element">
 				<span class="input-group-addon"><i id="corp" style="background-color: rgb(238, 238, 238);"></i></span>
-				<input name="corp" class="form-control" type="text"  id="corp"> 
+				<input name="corp" class="form-control" type="text"  id="corp1"> 
 			</div>
 		</div>
 
