--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -113,12 +113,11 @@
 
 		$(function() {
         	$('form').submit(function() {
-            	$('#json').text(JSON.stringify($('form').serializeObject()));
+            	$('#json').html(JSON.stringify($('form').serializeObject()));
 	            return false;
 	       	 });
     	});
    
-		
 	</script>
 
 </body>
