--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -101,7 +101,7 @@
 	<script type="text/javascript" src="loadjson.js"></script>
 	<script src="http://assets.locaweb.com.br/locastyle/3.7.2/javascripts/locastyle.js" type="text/javascript"></script>
 	<script src="bootstrap.min.js" type="text/javascript"></script>
-	<script src="colorpicker/js/bootstrap-colorpicker.min.js" type="text/javascript"></script>
+	<script src="colorpicker/js/bootstrap-colorpicker.js" type="text/javascript"></script>
 
 	<script>
 
