--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -82,8 +82,8 @@
 
 	<div class="col-md-8">
 	<h3 class="doc-title-3"  style="margin-bottom:20px;">Json de retorno</h3>
-		<div id="json">
-			<pre>
+		<div>
+			<pre  id="json">
 				{
 					"nome":"Bruno Sanches Belintani",
 					"sexo":"masculino",
