--- a/loadjson/index.html
+++ b/loadjson/index.html
@@ -7,6 +7,8 @@
 
 <link href="colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
 <link href="bootstrap.min.css" rel="stylesheet" type="text/css">
+
+<meta name = "viewport" content = "width=device-width, user-scalable = no, initial-scale=1">
 </head>
 
 <body>
