--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -2,8 +2,8 @@
         <fieldset>
           
           <div class="form-group">
-              <label for="ipt1">Background Header</label>
-              <input type="background" class="form-control" id="ipt1" placeholder="Insira seu texto aqui">
+              <label for="ipt1">Titulo da Pagina</label>
+              <input type="background" class="form-control" id="titulo" name="titulo" placeholder="Insira seu texto aqui">
           </div>
           
           <div class="form-group">
@@ -12,16 +12,16 @@
           </div>
 
 
-          <label class="ls-label">
+          <div class="ls-label">
               <b class="ls-label-text">Selecione uma cor</b>
               <div class="ls-custom-select">
                 <select name="cor" id="cor">
-                <option value="azul">Azul</option>
-                    <option value="vermelho">Vermelho</option>
-                    <option value="verde">Verde</option>
+                  <option value="azul">Azul</option>
+                  <option value="vermelho">Vermelho</option>
+                  <option value="verde">Verde</option>
                 </select>
               </div>
-            </label>
+            </div>
 
             <div class="ls-label">
               <p>Selecione pelo menos uma opção:</p>
