--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -12,7 +12,7 @@
           </div>
 
 
-          <div class="ls-label">
+          <div class="form-group">
               <label for="exampleInputFile">Selecione uma cor</label>
               <div class="ls-custom-select">
                 <select name="cor" id="cor">
@@ -23,7 +23,7 @@
               </div>
             </div>
 
-            <div class="ls-label">
+            <div class="form-group">
               <p>Selecione pelo menos uma opção:</p>
               <label class="ls-label-text">
                 <input type="checkbox" name="opcao1" id="opcao1">
