--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -46,7 +46,7 @@
 
           <div class="form-group">
             <label class="ls-label-text">Header Background</label>
-            <div class="input-group demo2 colorpicker-element">
+            <div class="input-group colorPicker colorpicker-element">
               <span class="input-group-addon"><i id="corp" style="background: rgb(204, 0, 0);"></i></span>
               <input name="corp" class="form-control" type="text" id="corp1"> 
             </div>
