--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -1,10 +1,9 @@
-<form role="form">
+<form role="form" enctype="multipart/form-data" method="post">
         <fieldset>
-          
-          <div class="form-group">
+          <!-- <div class="form-group">
               <label for="ipt1">Título da Pagina</label>
               <input type="background" class="form-control" id="titulo" name="titulo" placeholder="Insira seu texto aqui">
-          </div>
+          </div> -->
           
           <div class="form-group">
             <label for="exampleInputFile">Campo para envio de arquivo</label>
@@ -12,7 +11,7 @@
           </div>
 
 
-          <div class="form-group">
+          <!-- <div class="form-group">
               <label for="exampleInputFile">Selecione uma cor</label>
               <div class="ls-custom-select">
                 <select name="cor" id="cor">
@@ -50,6 +49,6 @@
               <span class="input-group-addon"><i id="corp" style="background: rgb(204, 0, 0);"></i></span>
               <input name="corp" class="form-control" type="text" id="corp1"> 
             </div>
-          </div>
+          </div> -->
         </fieldset>
       </form>
