--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -1,5 +1,5 @@
-<form role="form" enctype="multipart/form-data" method="post">
-        <fieldset>
+<form method="post" enctype="multipart/form-data">
+       <!--  <fieldset> -->
           <!-- <div class="form-group">
               <label for="ipt1">Título da Pagina</label>
               <input type="background" class="form-control" id="titulo" name="titulo" placeholder="Insira seu texto aqui">
@@ -50,5 +50,5 @@
               <input name="corp" class="form-control" type="text" id="corp1"> 
             </div>
           </div> -->
-        </fieldset>
+   <!--      </fieldset> -->
       </form>
