--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -5,10 +5,10 @@
               <input type="background" class="form-control" id="titulo" name="titulo" placeholder="Insira seu texto aqui">
           </div> -->
           
-          <div class="form-group">
-            <label for="exampleInputFile">Campo para envio de arquivo</label>
+<!--           <div class="form-group">
+            <label for="exampleInputFile">Campo para envio de arquivo</label> -->
             <input type="file" id="exampleInputFile">
-          </div>
+   <!--        </div> -->
 
 
           <!-- <div class="form-group">
