--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -1,5 +1,4 @@
-<form method="post" enctype="multipart/form-data">
+
      
-            <input type="file" id="exampleInputFile">
+            <input type="file">
   
-      </form>
