--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -1,55 +1,1 @@
-
-        <fieldset>
-          
-          <div class="form-group">
-              <label for="ipt1">Título da Pagina</label>
-              <input type="background" class="form-control" id="titulo" name="titulo" placeholder="Insira seu texto aqui">
-          </div>
-          
-          <div class="form-group">
-            <label for="exampleInputFile">Campo para envio de arquivo</label>
-            <input type="file" id="exampleInputFile">
-          </div>
-
-
-          <div class="form-group">
-              <label for="exampleInputFile">Selecione uma cor</label>
-              <div class="ls-custom-select">
-                <select name="cor" id="cor">
-                  <option value="azul">Azul</option>
-                  <option value="vermelho">Vermelho</option>
-                  <option value="verde">Verde</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <p>Selecione pelo menos uma opção:</p>
-              <label class="ls-label-text">
-                <input type="checkbox" name="opcao1" id="opcao1">
-                Opção 1
-              </label>
-              <label class="ls-label-text">
-                <input type="checkbox" name="opcao2" id="opcao2" checked="checked">
-                Opção 2
-              </label>
-              <label class="ls-label-text">
-                <input type="checkbox" name="opcao3" id="opcao3">
-                Opção 3
-              </label>
-            </div>
-
-            <div class="form-group">
-              <label for="msg">Mensagem</label>*
-              <textarea class="form-control required" cols="30" rows="10" name="msg" aria-required="true" id="msg"></textarea>
-            </div>
-
-          <div class="form-group">
-            <label class="ls-label-text">Header Background</label>
-            <div class="input-group colorPicker colorpicker-element">
-              <span class="input-group-addon"><i id="corp" style="background: rgb(204, 0, 0);"></i></span>
-              <input name="corp" class="form-control" type="text" id="corp1"> 
-            </div>
-          </div>
-        </fieldset>
-
+<input id="attachment" name="filhote" type="file">
