--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -1,1 +1,5 @@
 <input id="attachment" name="filhote" type="file">
+ <div class="form-group">
+            <label for="exampleInputFile">Campo para envio de arquivo</label>
+            <input type="file" id="exampleInputFile">
+          </div>
