--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -1,6 +1,6 @@
 <input id="attachment" name="filhote" type="file">
    <label for="exampleInputFile">Campo para envio de arquivo</label>
-  <input id="exampleInputFile" type="file" >
+  <input id="xxxxxx" type="file" >
  <div class="form-group">
             <label for="exampleInputFile">Campo para envio de arquivo</label>
             <input type="file" id="exampleInputFile">
