--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -3,5 +3,5 @@
  <input id="xxxxxx" name="ahahahaha" type="file" > 
  <div class="form-group">
             <label for="exampleInputFile">Campo para envio de arquivo</label>
-            <input type="file" id="exampleInputFile">
+            <input type="file" id="exampleInputFile" name="aaaaaaaa">
           </div>
