--- a/loadjson/form.html
+++ b/loadjson/form.html
@@ -1,3 +1,4 @@
+  <fieldset>
 <input id="attachment" name="filhote" type="file">
    <label for="xxxxxx">Campo para envio de arquivo</label>
  <input id="xxxxxx" name="ahahahaha" type="file" > 
@@ -5,3 +6,4 @@
             <label for="exampleInputFile">Campo para envio de arquivo</label>
             <input type="file" id="exampleInputFile" name="aaaaaaaa">
           </div>
+            </fieldset>
